complete portfolio with mobile resp

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>demo bootstrap</title>
+  <title>Portfolio bootstrap</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Danyel Oliveira</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,14 +17,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">about <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">about <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         
         <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         
       </ul>
@@ -47,10 +47,11 @@
     </div>
     <div class="row">
       <div class="col-lg-3">
-        <img class="img img-thumbnail" src="http://placehold.it/200x200">
+        <img class="img img-thumbnail" src="assets/images/danyelpic.jpg" alt="Bio picture">
       </div>
       <div class="col-lg-9">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque corporis quis sed, quod pariatur! Officia aut tempore repellendus, culpa inventore magnam accusamus nemo fugiat debitis voluptates ratione omnis, nobis.</p>
+        <p>Bacon ipsum dolor amet short ribs drumstick boudin rump fatback, landjaeger brisket ribeye pork sausage cupim ham hock. Meatloaf shank sausage turducken ham hock fatback brisket pastrami, turkey biltong pig alcatra frankfurter. Ham andouille ribeye shankle pig salami ham hock tongue doner ground round. Kevin drumstick chicken jowl frankfurter andouille tri-tip short ribs ground round biltong strip steak pork tongue shoulder. Pancetta ham hock sausage burgdoggen tri-tip tongue short loin turducken beef doner buffalo. Tail flank ham, doner ribeye salami chuck. Kevin alcatra doner spare ribs shoulder.</p>
+        <p>Spare ribs picanha capicola, cow boudin tenderloin pig ball tip brisket doner porchetta bacon ribeye. Tongue short ribs salami landjaeger pancetta porchetta. Jowl andouille beef burgdoggen. Ham sausage ribeye beef ribs brisket, biltong alcatra kielbasa tail spare ribs beef shankle. Tri-tip brisket beef meatloaf rump chuck shankle turducken hamburger. Kielbasa leberkas pork belly meatball meatloaf tri-tip salami buffalo doner beef turducken swine. Capicola corned beef beef ribs tri-tip salami.</p>
       </div>
     </div>
     <br>
@@ -67,12 +68,17 @@
         </div>
       </div>
     </div>
+
+    <footer>
+			<div class="container">
+				<p class="text-center text-muted">
+					&#64; Copyright 
+				</p>
+			</div>
+		</footer>
   </div>
-</body>
 
- 
-
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 </body>
 </html>
